# JSON-reader-FOR-Specific-JSONS

./: 11Copy.cpp  ACHIEVEMENT_SUMMARY.md  CMakeLists.txt  COMPLETE_SYSTEM_SUMMARY.md  ENHANCEMENT_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_VALIDATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MULTI_DIMENSIONAL_POINTING_README.md  Makefile  POINTING_INDEX_README.md  ParsedId.h  README.md  README_INTEGRATED.md  README_JSON_READER_SYSTEM.md  SOLUTION_FINAL.md  SOLUTION_SUMMARY.md  Synthesizer.json  ai_synthesis  before_after_comparison.py  clean_config.json  comprehensive_test  comprehensive_test.cpp  config.json  core  demo.sh  demo_arrangement.json  demo_complete_system.sh  demo_script.sh  enhanced_embedding_system  enhanced_embedding_system.cpp  final_demo_config.json  group.json  guitar.json  integrated_ai_synthesis_system.cpp  json_reader.py  json_reader_system  json_reader_system.cpp  json_reader_system.h  (+24 more)
config/: weights.json
data/: clean_config.json
include/: ai_scorer.h  audio_config.h  common_types.h  interactive_menu.h  json_parser.h  patch_generator.h
src/: audio_config_cli.cpp  audio_config_system.cpp  audio_config_system.hpp  main.cpp
test/: CMakeLists.txt
